# andromeda-cli

./: .gitignore  Cargo.toml  README.md  SETUP.md
.github/workflows/: release.yml
docs/: cli-reference.md
scripts/: install.ps1  install.sh
src/: main.rs
