[package]
name        = "andromeda-cli"
version     = "0.1.0"
edition     = "2021"
description = "CLI manager for Andromeda Dashboard — install, start, stop, tunnel, and more"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/Thunder-BluePhoenix/andromeda-cli"
homepage    = "https://github.com/Thunder-BluePhoenix/andromeda-cli"

[[bin]]
name = "andromeda"
path = "src/main.rs"

[dependencies]
clap         = { version = "4",    features = ["derive"] }
tokio        = { version = "1",    features = ["full"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
reqwest      = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
rand         = "0.8"
dirs         = "5"
anyhow       = "1"

[profile.release]
lto           = true
codegen-units = 1
opt-level     = 3
strip         = true
